# POLARITY_IQ-Assesment

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  query_logic.py  rag_engine.py  rag_service.py  requirements.txt  sample_response.json  streamlit_app.py  sug.txt
.github/workflows/: ci.yml
src/polarity_iq/: __init__.py  __main__.py  cli.py  query_logic.py  rag_engine.py  rag_service.py
tests/: conftest.py  test_query_logic.py  test_smoke.py
