[project]
name = "polarity-iq"
version = "0.1.0"
description = "Minimal RAG pipeline (FAISS + deterministic filtering)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "pandas",
  "openpyxl",
  "numpy",
  "openai",
  "python-dotenv",
  "faiss-cpu",
  "scikit-learn",
  "joblib",
  "streamlit",
  "pycountry",
]

[project.scripts]
polarity-iq = "polarity_iq.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# These wrapper files intentionally adjust sys.path before importing the src-layout package.
[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402", "I001"]
"rag_engine.py" = ["E402", "I001"]
"rag_service.py" = ["E402", "I001"]
"query_logic.py" = ["E402", "I001"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
